# btrfs-assistant-bkmo

./: .gitignore  Btrfs.cpp  Btrfs.h  BtrfsAssistant.cpp  BtrfsAssistant.h  CMakeLists.txt  FileBrowser.ui  PKGBUILD  README.md  Snapper.cpp  Snapper.h  SubvolModel.cpp  SubvolModel.h  btrfs-assistant.cpp  btrfs-assistant.ui  changelog  flake.nix
data/: icons.qrc
data/icons/: icons.qrc
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
icons/: icons.qrc
nix/: default.nix
src/: BtrfsAssistant.cpp  CMakeLists.txt  btrfs-assistant  btrfs-assistant-launcher  btrfs-assistant.conf  main.cpp
src/config/: CMakeLists.txt
src/gui/: BtrfsAssistant.cpp  BtrfsMaintenance.cpp  CMakeLists.txt  DiffViewer.cpp
src/model/: SubvolModel.cpp  SubvolModel.h
src/models/: SubvolModel.cpp  SubvolModel.h
src/ui/: BtrfsAssistant.cpp  CMakeLists.txt  Cli.cpp  Cli.h  DiffViewer.cpp  FileBrowser.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SnapshotSubvolumeDialog.cpp  SnapshotSubvolumeDialog.h  SnapshotSubvolumeDialog.ui  SnapshotSubvolumeDialog_backUp.ui  btrfs-assistant.ui
src/util/: Btrfs.cpp  Btrfs.h  BtrfsMaintenance.h  CMakeLists.txt  Snapper.cpp  Snapper.h  System.cpp  System.h
widgets/: FilterLineEdit.cpp
